# Robot-Rover

./: .gitignore  readme.MD
arm/: CMakeLists.txt  servo_info.txt  xn_arm.cpp  xn_arm.hpp  xn_gpio.cpp  xn_gpio.hpp  xn_gpio_raspi.cpp  xn_gpio_win32.cpp  xn_ik.cpp  xn_ik.hpp  xn_vec.cpp  xn_vec.hpp
arm/src/: xn_arm.hpp  xn_gpio.cpp  xn_gpio_win32.cpp  xn_ik.cpp  xn_math.hpp  xn_vec.hpp  xn_vec2.hpp
assets/shaders/: basic_uv.vert  color_lit.vert  lit_normals.frag  lit_normals.vert
assets/shaders/spv/: color_lit_vert.spv  lit_frag.spv  lit_normals_frag.spv
esp32/libraries/ESP32Servo/src/: analogWrite.cpp  analogWrite.h
esp32/libraries/i2c_periph/: i2c_periph.h
esp32/rover/: main.ino  robot_instructions.h  robot_ipconfig.h  rover.ino  xn_current_sensor.h  xn_ik.h  xn_net.h  xn_ota.h  xn_peripherals.h
esp32/test_wheelmotor/: test_wheelmotor.ino  xn_net.h  xn_peripherals.h
pointcloud/: 3scans_2.p  pointcloud.bob  scan10_1.bob
raspberrypi/: CMakeLists.txt  armhf-toolchain.cmake  autosync.sh  tfmini.py
raspberrypi/SPI_Camera/src/: ArduCAM.c  ArduCAM.h  sccb_bus.c  sccb_bus.h
raspberrypi/raspicam/: CMakeLists.txt
raspberrypi/raspicam/simpletest_raspicam/: live_stream.py  save_image.py  save_video.py
raspberrypi/src/: arducam_sock.cpp  arm_controller_main.cpp  arm_controller_main_old.cpp  led_pwm.cpp  lidar_net.cpp  pano_controller.cpp  picam_cv_stream.cpp  picam_cv_stream_lossless.cpp  picam_minimal.cpp  picam_stream.cpp  rot_enc.cpp  servo_demo.cpp
raspberrypi/src/XNlib/: xn_collisions.hpp  xn_gpio.hpp  xn_ik.hpp  xn_math.hpp  xn_net.cpp  xn_net.hpp  xn_pointcloud.hpp  xn_search.hpp  xn_test_phys.cpp  xn_test_virtual.cpp
raspberrypi/src/XNlib/gpio_new/: xn_gpio2.cpp  xn_gpio2.hpp
raspberrypi/src/XNlib/opengl/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  analysis.txt  astar  cmake_install.cmake  gl_app  glxinfo.txt  gmon.out  imgui.ini  imgui_save_test.pc  lap3.pc  lap_2.pc  lap_3.pc  lap_4.pc  lidar_gl  lidar_gl.cpp  newcar.pc  shader.h  sonar  sonar_gl.cpp  troll.pc  xn_gl.hpp  xn_gui.hpp  xn_renderer.hpp  xn_robot_host_app.hpp  xn_texture.hpp  xn_vertex_arrays.hpp
raspberrypi/src/XNlib/opengl/pointcloud/: 2wd.pc  gameroom_60hz.bob  lap.pc  lap_1.pc  scan4_1.bob
raspberrypi/src/XNlib/opengl/shaders/: font.fs  textures.vs
raspberrypi/src/tests/: arducam_minimal.cpp  i2c_controller.cpp  led_pwm.cpp  picam_cv_minimal.cpp  picam_cv_stream.cpp  picam_cv_stream_lossless.cpp  picam_stream.cpp  serial_read.cpp  sonar.cpp  stepper.cpp  tfmini.cpp
raspberrypi/src/ws/: message_queue.h  ws_ring_server.c
shaders/: camera_vertex_color.fs  camera_vertex_color.vs  lit.vs
shared/: robot_instructions.h  xn_net.h  xn_net.hpp
src/: lidar_gl.cpp
src/app/: app_threads_shared.cpp  robo_imgui_vulkan.hpp
src/opengl/: shader.h  xn_gui.hpp  xn_text.hpp
src/robo/: xn_car_virtual.cpp  xn_console.cpp  xn_gpio.hpp  xn_homo.cpp  xn_ik.cpp  xn_ik.hpp  xn_log.hpp  xn_pointcloud.cpp  xn_search.hpp  xn_ssh.cpp
src/tests/: calibrate_camera.hpp  picam_stream.cpp  yolo.cpp
src/util/: xn_math.cpp  xn_vec.cpp
windows/: CMakeLists.txt  old_linux_code.cpp  robo_build.py
windows/assets/config/: vk_config.json  xn_settings.json
windows/assets/pointcloud/: 360_esp2.bob  360_esp3.bob  gameroom_20ms.bob  newformat.pc  room_unknow_rot copy.bob
windows/assets/shaders/: basic.vert  basic_uv.frag  color_lit.frag  lit.frag  lit.vert
windows/assets/shaders/gles/: font.vs  outline.fs
windows/assets/shaders/spv/: basic_uv_vert.spv  basic_vert.spv  color_lit_frag.spv  lit_vert.spv
windows/config/: scene.json
windows/pointcloud/: 2wd_1.pc  360_esp.bob  360_esp_behind_couch.bob  3scans.bob  fail.bob  gameroom_80ms.bob  hello.bob  scan2.bob  scan2_1.bob  scan3.bob
windows/shaders/: 2d.fs  2d.vs  lit.fs  outliner.vs  textures.fs
windows/src/: App.cpp  App.h  lidar_vk.cpp  xn_robot_host_app.hpp
windows/src/app/: app_state.cpp  app_state.hpp  app_threads.hpp  app_threads_shared.cpp  app_threads_shared.hpp  robo_imgui_shared.hpp  robo_uniforms_vulkan.hpp
windows/src/opengl/: xn_button.hpp  xn_gl.hpp  xn_renderer.hpp  xn_robot_host_app.hpp  xn_texture.hpp
windows/src/robo/: xn_car_virtual.hpp  xn_console.cpp  xn_console.hpp  xn_homo.cpp  xn_homo.hpp  xn_ik.cpp  xn_ik.hpp  xn_log.cpp  xn_net.cpp  xn_net.hpp  xn_pointcloud.cpp  xn_pointcloud.hpp  xn_rover.cpp  xn_rover.hpp  xn_search.cpp  xn_search.hpp  xn_ssh.hpp  xn_yolo.cpp  xn_yolo.hpp
windows/src/tests/: calibrate_camera.cpp  generic_tree.cpp  imgui_demo.cpp  picam_stream_jpeg.cpp  search_test.cpp  textures.cpp  yolo_stream.cpp
windows/src/util/: load_scene_json.hpp  load_settings.hpp  xn_asset_loader.hpp  xn_math.hpp  xn_vec.hpp
